classDiagram
    direction LR

    class Usuario {
        -id : Long
        -nome : String
        -email : String
        -senhaHash : String
        -role : Role
    }

    class Jogador {
    }

    class Administrador {
    }

    class Pergunta {
        -id : Long
        -enunciado : Text
        -indice : Text
        -opcaoA : Text
        -opcaoB : Text
        -opcaoC : Text
        -opcaoD : Text
        -opcaoE : Text
        -alternativaCorreta : String
        -disciplina : Disciplina
        -instituicao : Instituicao
        -ano : Integer
        -imagem : String
        -ativo : Boolean
    }

    class Partida {
        -id : Long
        -tempoDeJogo : int
        -codigoPin : String
        -statusSala : StatusPartida
        -criadoEm : DateTime
    }

    class PartidaQuestao {
        -id : Long
        -ordem : int
    }

    class Participacao {
        -id : Long
        -scorePartida : int
    }

    class Resposta {
        -id : Long
        -alternativaMarcada : String
        -tempoResposta : int
        -acertou : Boolean
    }

    Usuario <|-- Jogador
    Usuario <|-- Administrador

    Jogador "1" --> "0..*" Partida : hospeda

    Jogador "1" --> "0..*" Participacao : participa
    Partida "1" --> "1..*" Participacao : possui

    Partida "1" --> "5..30" PartidaQuestao : sorteia
    Pergunta "1" --> "0..*" PartidaQuestao : compoe

    Participacao "1" --> "0..*" Resposta : registra
    Resposta "1" --> "1" PartidaQuestao : responde

    Administrador "1" --> "0..*" Pergunta : gerencia
